new/components/gke/configure/frontend.Service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    # Reference the `BackendConfig` CR created
    beta.cloud.google.com/backend-config: '{"default": "sourcegraph-frontend"}'
  name: sourcegraph-frontend
